--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -35,15 +35,14 @@ jobs:
       commandOptions: -out=$(Build.StagingDirectory)/tfplan -var-file=$(TF_VAR_FILE)
       environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
 
-  - ${{ if eq(parameters.useTFOutputs, false) }}:
   # Allow Terraform Apply to be skipped if there are no changes
-    - script: |
-        isTerraformRequired=$(jq -er '.resource_changes | map(.change.actions) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
-        echo "##vso[task.setvariable variable=isRequired;isOutput=true]${isTerraformRequired}"
-      name: TerraformCondition
-      displayName: Apply Condition
-      env:
-        tfjson: $(TerraformPlan.jsonPlanFilePath)
+  - script: |
+      isInfraChange=$(jq -er '.resource_changes | map(.change.actions) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
+      echo "##vso[task.setvariable variable=isRequired;isOutput=true]${isInfraChange}"
+    name: TerraformCondition
+    displayName: Apply Condition
+    env:
+      tfjson: $(TerraformPlan.jsonPlanFilePath)
 
   - script: mv $(TerraformPlan.jsonPlanFilePath) $(Build.StagingDirectory)/tfplan.json
     name: StageTFPlanJson
