--- a/Terraform/init.yml
+++ b/Terraform/init.yml
@@ -4,6 +4,7 @@ parameters:
 
 steps:
 - ${{ if ne(parameters.useTerraform, false) }}:
+  - script: echo ${{ parameters.useTerraform }}
   # get the version from the useTerraform param if set
   - ${{ if ne(parameters.useTerraform, true) }}:
     - script: echo "##vso[task.setvariable variable=version;isOutput=true]${TF_VERSION}"
@@ -28,12 +29,13 @@ steps:
       condition: eq(variables['System.StageName'], 'Deploy')
       workingDirectory: $(Pipeline.Workspace)/tfplan-$(ENVIRONMENT_NAME)
 
-  # fallback to the pre-installed version if a different version not found above
   - task: TerraformInstaller@0
     displayName: Install 
     condition: ne(variables['GetTFVersion.version'], '')
     inputs:
       terraformVersion: $(GetTFVersion.version)
+
+# pipeline will use the pre-installed version if a different version not installed above
 
 - task: TerraformTaskV1@0
   displayName: Init
