--- a/Terraform/output.yml
+++ b/Terraform/output.yml
@@ -2,27 +2,48 @@
 parameters:
 - name: terraformOutputEnv
   type: object
+  default: ''
 - name: useTerraform
   type: string
   
 jobs:
-- job: GetTFOutput
-  displayName: Get Terraform Outputs
-  dependsOn: Terraform
-  condition: or(succeeded('Terraform'), and(eq(variables.IS_INFRA_CHANGE, 'false'), eq(variables.IS_OUPUT_CHANGE, 'false')))
-  steps:
-  - download: current
-    artifact: tfplan-$(ENVIRONMENT_NAME)
-    displayName: Get tfplan
+- ${{ if eq(parameters.terraformOutputEnv, '') }}:
+  - job: PublishTFOutputs
+    displayName: Publish Terraform Outputs
+    condition: and(eq(variables.IS_INFRA_CHANGE, 'false'), eq(variables.IS_OUPUT_CHANGE, 'false'))
+    steps:
+    - download: current
+      artifact: tfplan-$(ENVIRONMENT_NAME)
+      displayName: Get tfplan
 
   - template: init.yml
     parameters:
       useTerraform: ${{ parameters.useTerraform }}
 
-  - ${{ each entry in parameters.terraformOutputEnv }}:
-    - script: |
-        output=$(terraform output -json ${{ entry.Value }} | jq -er '.')
-        echo "##vso[task.setvariable variable=value;isOutput=true]${output}"
-      displayName: Get ${{ entry.Value }}
-      name: ${{ entry.Key }}
-      workingDirectory: terraform
+  - script: echo $(terraform output -json) > $(Build.StagingDirectory)/tfoutput.json
+    displayName: Get Outputs
+
+  - publish: $(Build.StagingDirectory)
+    artifact: tfoutput-$(ENVIRONMENT_NAME)
+    displayName: Publish Outputs
+
+- ${{ if ne(parameters.terraformOutputEnv, '') }}:
+  - job: GetTFOutput
+    displayName: Get Terraform Outputs
+    dependsOn: 
+    - Terraform
+    - PublishTFOutputs
+    condition: or(succeeded('Terraform'), succeeded('PublishTFOutputs'))
+    steps:
+    - download: current
+      artifact: tfoutput-$(ENVIRONMENT_NAME)
+      displayName: Download Outputs
+
+    - ${{ each entry in parameters.terraformOutputEnv }}:
+      - script: |
+          output=$(jq -er '.${{ entry.Value }}.value')
+          echo $output
+          echo "##vso[task.setvariable variable=value;isOutput=true]${output}"
+        displayName: Map ${{ entry.Key }}
+        name: ${{ entry.Key }}
+        workingDirectory: $(Pipeline.Workspace)/tfoutput-$(ENVIRONMENT_NAME)
