--- a/Terraform/output-publish.yml
+++ b/Terraform/output-publish.yml
@@ -3,6 +3,7 @@ parameters:
 - name: useTerraform
   type: string
   
+jobs:
 - job: PublishTFOutputs
   displayName: Publish Terraform Outputs
   condition: and(eq(variables.IS_INFRA_CHANGE, 'false'), eq(variables.IS_OUPUT_CHANGE, 'false'))
