--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -98,25 +98,9 @@ stages:
           preDeploySteps: 
           - template: ${{ parameters.deployType }}/deploy.yml
 
-  - job: PublishTFOutputs
-    displayName: Publish Terraform Outputs
-    condition: and(eq(variables.IS_INFRA_CHANGE, 'false'), eq(variables.IS_OUPUT_CHANGE, 'false'))
-    steps:
-    - download: current
-      artifact: tfplan-$(ENVIRONMENT_NAME)
-      displayName: Get tfplan
-
-    - template: Terraform/init.yml
+    - template: Terraform/output-publish.yml
       parameters:
         useTerraform: ${{ parameters.useTerraform }}
-    
-    - script: echo $(terraform output -json) > $(Build.StagingDirectory)/tfoutput.json
-      displayName: Get Outputs
-      workingDirectory: terraform
-      
-    - publish: $(Build.StagingDirectory)
-      artifact: tfoutput-$(ENVIRONMENT_NAME)
-      displayName: Publish Outputs
 
   - ${{ if and(ne(parameters.deployType, 'null'), ne(parameters.useContainerImage, false)) }}:
     - template: helpers/container-job.yml
