--- a/ReactApp/build.yml
+++ b/ReactApp/build.yml
@@ -6,9 +6,7 @@ parameters:
 steps:
 - ${{ if ne(parameters.terraformOutputEnv, '') }}:
   - template: ../Terraform/output-map.yml
-    parameters:
-      ${{ each output in parameters.terraformOutputEnv }}:
-        ${{ output.Key }}: ${{ output.Value }}
+    parameters: ${{ parameters.terraformOutputEnv }}
 
 - script: printenv
 - task: Cache@2
