--- a/ReactApp/build.yml
+++ b/ReactApp/build.yml
@@ -27,14 +27,15 @@ steps:
   displayName: Install Dependencies
   condition: ne(variables.CACHE_RESTORED, 'true')
 
-- script: ./node_modules/.bin/env-cmd -f .env.${ENVIRONMENT_NAME} npm run build
+- script: |
+    printenv
+    # ./node_modules/.bin/env-cmd -f .env.${ENVIRONMENT_NAME} npm run build
   displayName: Build App
+  env:
+    ${{ each output in parameters.terraformOutputEnv }}:
+      ${{ if startsWith(output.Key, 'REACT_APP_') }}:
+        ${{ output.Key }}: $(${{ output.Key }}.value)
 
 - publish: $(System.DefaultWorkingDirectory)/build/
   artifact: react-app-$(ENVIRONMENT_NAME)
   displayName: Publish App Artifact
-
-
-
-  # ${{ each output in parameters.terraformOutputEnv }}:
-  #           ${{ output.Key }}: $[ dependencies.PublishTFOutputs.outputs['${{ output.Key }}.value'] ]
