--- a/ReactApp/deploy.yml
+++ b/ReactApp/deploy.yml
@@ -16,6 +16,8 @@ steps:
 
 - task: AWSShellScript@1
   displayName: Sync S3 Bucket
+  env:
+    S3_BUCKET_NAME: $(S3_BUCKET_NAME.value)
   inputs:
     awsCredentials: $(AWS_SERVICE_CONNECTOR)
     regionName: $(AWS_REGION)
