--- a/ReactApp/build.yml
+++ b/ReactApp/build.yml
@@ -7,12 +7,12 @@ steps:
 - ${{ if ne(parameters.terraformOutputEnv, '') }}:
   - template: ../Terraform/output-map.yml
     parameters: 
-      terraformOutputEnv: 
+      terraformOutputEnv:
+        # map Terraform outputs to respective REACT_APP env variables 
         ${{ each output in parameters.terraformOutputEnv }}:
           ${{ if startsWith(output.Key, 'REACT_APP_') }}:
             ${{ output.Key }}: ${{ output.Value }}
 
-- script: printenv
 - task: Cache@2
   displayName: Check Dependency Cache
   inputs:
@@ -27,9 +27,7 @@ steps:
   displayName: Install Dependencies
   condition: ne(variables.CACHE_RESTORED, 'true')
 
-- script: |
-    printenv
-    # ./node_modules/.bin/env-cmd -f .env.${ENVIRONMENT_NAME} npm run build
+- script: ./node_modules/.bin/env-cmd -f .env.${ENVIRONMENT_NAME} npm run build
   displayName: Build App
   env:
     ${{ each output in parameters.terraformOutputEnv }}:
