--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -88,8 +88,7 @@ stages:
       parameters:
         condition: and(succeeded(), or(ne(variables.IS_INFRA_CHANGE, 'false'), ne(variables.IS_OUPUT_CHANGE, 'false')))
         ${{ if in(parameters.deployType, 'LambdaService') }}:
-          dependsOn: 
-          - BuildSources
+          dependsOn: BuildSources
         ${{ if in(parameters.deployType, 'ADO') }}:
           env:
             AZDO_PERSONAL_ACCESS_TOKEN: '$(AZDO_PERSONAL_ACCESS_TOKEN)'
