--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -8,6 +8,9 @@ parameters:
 jobs:
 - job: Terraform
   steps:
+  - checkout: self
+    submodules: true
+    
   - template: init.yml
     parameters:
       useTerraform: ${{ parameters.useTerraform }}
