configure security credentials

--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -10,8 +10,13 @@ jobs:
   steps:
   - checkout: self
     persistCredentials: true
-    submodules: true
-    
+
+  - script: |
+      AUTH=$(echo -n ":$REPO_PAT" | openssl base64 | tr -d '\n')
+      git -c http.https://WatercareServicesLimited@dev.azure.com/WatercareServicesLimited/DevOps/_git/terraform-modules.extraheader="AUTHORIZATION: basic $AUTH"
+    env:
+      REPO_PAT: $(System.AccessToken)
+
   - template: init.yml
     parameters:
       useTerraform: ${{ parameters.useTerraform }}
