--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -13,7 +13,7 @@ jobs:
 
   - script: |
       AUTH=$(echo -n ":$REPO_PAT" | openssl base64 | tr -d '\n')
-      git config --global --add http.https://WatercareServicesLimited@dev.azure.com/WatercareServicesLimited/DevOps/_git/terraform-modules.extraheader="AUTHORIZATION: basic $AUTH"
+      git config --global --add http.https://WatercareServicesLimited@dev.azure.com/WatercareServicesLimited/DevOps/_git/terraform-modules.extraheader "AUTHORIZATION: basic $AUTH"
     env:
       REPO_PAT: $(System.AccessToken)
 
