--- a/Terraform/init.yml
+++ b/Terraform/init.yml
@@ -36,6 +36,7 @@ steps:
 
 # pipeline will use the pre-installed version if a different version not installed above
 
+# Allow pipeline to access terraform-modules repo for private modules
 - script: |
     AUTH=$(echo -n ":$REPO_PAT" | openssl base64 | tr -d '\n')
     git config --global --add http.https://WatercareServicesLimited@dev.azure.com/WatercareServicesLimited/DevOps/_git/terraform-modules.extraheader "AUTHORIZATION: basic $AUTH"
