--- a/LambdaService/build.yml
+++ b/LambdaService/build.yml
@@ -4,7 +4,7 @@ parameters:
   default: ''
 
 steps:
-${{ if eq(parameters.buildDirectories, '')}}:
+- ${{ if eq(parameters.buildDirectories, '') }}:
   - script: echo "##vso[task.logissue type=warning]Warning no buildDirectories specified."
 
 - script: |
