--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -103,8 +103,6 @@ stages:
         ${{ if in(parameters.deployType, 'LambdaService') }}:
           preDeploySteps: 
           - template: ${{ parameters.deployType }}/deploy.yml
-            parameters: 
-              buildDirectories: ${{ parameters.buildDirectories }}
 
     - template: Terraform/output-publish.yml
       parameters:
@@ -122,6 +120,8 @@ stages:
         - template: ${{ parameters.deployType }}/build.yml
           parameters:
             terraformOutputEnv: ${{ parameters.terraformOutputEnv }}
+            ${{ if in(parameters.deployType, 'LambdaService') }}:
+              buildDirectories: ${{ parameters.buildDirectories }}
 
   - ${{ if in(parameters.deployType, 'ReactApp') }}:
     - deployment: DeployArtifacts
