--- a/LambdaService/validate.yml
+++ b/LambdaService/validate.yml
@@ -5,11 +5,14 @@ parameters:
 
 steps:
 - ${{ if eq(parameters.buildDirectories, '') }}:
-  - script: echo "##vso[task.logissue type=warning]Warning no buildDirectories specified."
+  - script: echo "##vso[task.logissue type=warning]Warning: no build directories specified."
 
-- script: |
-    for dir in *
-      do (cd "$dir" && npm install && npm test)
-    done
-  displayName: Unit Tests
-  workingDirectory: lambdas
+- ${{ if ne(parameters.buildDirectories, '') }}:
+  - ${{ each entry in parameters.buildDirectories }}:
+    - script: echo "${{ entry.Key}}:${{ entry.Value }}"
+# - script: |
+#     for dir in *
+#       do (cd "$dir" && npm install && npm test)
+#     done
+#   displayName: Unit Tests
+#   workingDirectory: lambdas
