--- a/LambdaService/validate.yml
+++ b/LambdaService/validate.yml
@@ -12,6 +12,12 @@ steps:
     - script: ls -a
       displayName: ${{ entry.Value}}
       workingDirectory: lambdas/${{ entry.Key}}
+    
+    - task: npmAuthenticate@0
+      displayName: Override .npmrc
+      inputs:
+        workingFile: '.npmrc'
+      workingDirectory: lambdas/${{ entry.Key}}
 # - script: |
 #     for dir in *
 #       do (cd "$dir" && npm install && npm test)
