--- a/LambdaService/validate.yml
+++ b/LambdaService/validate.yml
@@ -16,8 +16,7 @@ steps:
     - task: npmAuthenticate@0
       displayName: Override .npmrc
       inputs:
-        workingFile: '.npmrc'
-      workingDirectory: lambdas/${{ entry.Key}}
+        workingFile: lambdas/${{ entry.Key}}.npmrc
 # - script: |
 #     for dir in *
 #       do (cd "$dir" && npm install && npm test)
